Fix item freeze after drag start on mobile devices
- Rather simple fix: https://github.com/clauderic/dnd-kit/issues/272

--- a/src/components/game/controls/DnDDiceBoard.module.sass
+++ b/src/components/game/controls/DnDDiceBoard.module.sass
@@ -23,6 +23,7 @@
   display: flex
   min-width: 40px
   height: auto
+  touch-action: none
 
 .rollBtn
   background-color: $primary-color
